# post-app

./: .env  README.md  docker-compose-cloudflare.yml  docker-compose.override.yml  docker-compose.yml
backend/: backend.dockerfile
backend/app/: .env  .gitignore  pyproject.toml  run.sh
backend/app/.ropeproject/: autoimport.db
backend/app/alembic/: env.py
backend/app/alembic/versions/: 00e49ded83cf_init_db.py
backend/app/app/: logger.py  main.py  prestart.py
backend/app/app/api/: deps.py
backend/app/app/api/v1/: api.py
backend/app/app/api/v1/endpoints/: auth.py  post.py  user.py
backend/app/app/core/: config.py  security.py
backend/app/app/db/: base.py  init_db.py  session.py
backend/app/app/email-templates/src/: new_account.mjml  reset_password.mjml  test_email.mjml
backend/app/app/models/: post.py  user.py
backend/app/app/schemas/: __init__.py  post.py  token.py  user.py
backend/app/app/store/: __init__.py  base.py  post.py  user.py
backend/app/app/utils/: email.py
frontend/: .editorconfig  .env  .env.development  .env.production  .env.staging  .eslintrc.cjs  .pnp.cjs  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/deploys/: nginx.conf
frontend/src/: App.vue  env.ts  main.ts  menus.ts  shims-vuex.d.ts  utils.ts
frontend/src/apis/: auth.ts  commons.ts  post.ts  user.ts
frontend/src/components/: ConfirmDialog.vue  Loading.vue  NotificationManager.vue
frontend/src/plugins/: vuetify.ts
frontend/src/router/: index.ts
frontend/src/store/: index.ts  state.ts
(+36 files in other folders)
